# ParallelHistogramEqualizer

./: CMakeLists.txt  README.md
src/: equalizer.cpp  equalizer.hpp  main.cpp
